# lambdser

./: .gitignore  README.md  example.py  example2.py  readme.md  setup.cfg
src/lambdser/: __init__.py  lambdser.py
test/: profiling.py  test_lambler.py
