[metadata]
name = lambdser
version = 0.1.0
description = fast lambda expression serializer
long_description = file: README.md, LICENSE.md
keywords = dill, lambda, serializer, pickle
license = GNU GPLv3
classifiers =
        Programming Language :: Python :: 3"
        License :: OSI Approved :: MIT
        Operating System :: OS Independent
author = Simon Bauer
author_email = code@seimenadventure.de

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    importlib; python_version >= "3.10"

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 7.0.0
    dill >= 0.3.4

