[bumpversion]
current_version = 0.1.2

[metadata]
name = lambdser
version = 0.1.1
description = fast lambda expression serializer
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = dill, lambda, serializer, pickle
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
author = Simon Bauer
author_email = code@seimenadventure.de
url = https://github.com/cloasdata/lambdser

[options]
zip_safe = False
include_package_data = True
package_dir = 
	= src
packages = find:
install_requires = 
	importlib-metadata; python_version >= "3.10"

[options.packages.find]
where = src

[options.extras_require]
test = 
	pytest >= 7.0.0
	dill >= 0.3.4
